Minor formatting changes

--- a/apps/hellotriangle/Emscripten/hellotriangle.html
+++ b/apps/hellotriangle/Emscripten/hellotriangle.html
@@ -181,7 +181,8 @@ canvas.emscripten { border: 0px none; background-color: black; }
             progressElement.max = parseInt(m[4])*100;
             progressElement.hidden = false;
             spinnerElement.hidden = false;
-          } else {
+          }
+          else {
             progressElement.value = null;
             progressElement.max = null;
             progressElement.hidden = true;
